--- a/chore-chart-client/src/app/app.component.html
+++ b/chore-chart-client/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>{{ title }}</h1>
 <nav>
   <a routerLink='/dashboard'>Dashboard</a>&nbsp; 
-  <a routerLink='/users'>Users</a> 
+  <a routerLink='/users'>Users</a>&nbsp;
+  <a routerLink='/register'>Register</a>
 </nav>
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
